bonus tech implementation

--- a/.env
+++ b/.env
@@ -8,3 +8,13 @@ SERPER_API_KEY=your_serper_api_key_here
 
 # Embeddings Configuration
 EMBEDDINGS_MODEL=sentence-transformers/all-MiniLM-L6-v2
+
+# Redis Configuration (for Celery queue worker)
+REDIS_URL=redis://localhost:6379/0
+
+# Database Configuration
+# SQLite (default - no setup needed)
+DATABASE_URL=sqlite:///./financial_analyzer.db
+
+# PostgreSQL (uncomment and configure if you want to use PostgreSQL)
+# DATABASE_URL=postgresql://username:password@localhost:5432/financial_analyzer
